# white-venom

./: .gitignore  00_install_README.md  CHANGELOG.md  CMakeLists.txt  Format_query.md  LICENSE.md  README.md  apt_minimal.md  debootstrap.md  for2  security_first_steps  stage0_panic.sh  starting.md  wf_buggy.txt  wireguard-alapok.md
.github/workflows/: changelog-bot.yml  changelog.yml  security-audit.yml  venom-security.yml
backup/: 04_dns_quad9.sh  05_dpkg_apt_hardening.sh  06_essential_packages.sh  10_user_ssh_hardening.sh  12_apparmor_config_hardening.sh  13_time_integrity_hardening.sh  15_postgresql_hardening.sh  SafeExecutor.cpp  SysctlModule.bak  SysctlModule.hpp.bak
context/: master_conetext_package_v2.1
debian_skeleton/: .gitignore  00_install.sh  00_install.sh.save  01_grub_inject.sh  01_orchestrator.sh  02_dns_quad9.sh  02_sysctl_ip6tables-security.sh  03_dns_quad9.sh  03_sysctl_ip6tables-security.sh  04-ipv6-worm-protection.sh  04_ipv6_worm_protection.sh  04_sysctl_ip6tables-security.sh  05_dpkg_apt_hardening.sh  06_dpkg_apt_hardening.sh  06_essential_packages.sh  07_audispd_rules.sh  07_essential_packages.sh  07_sysv_init_hardening.sh  07_without_systemd.sh  08_apparmor_hardening.sh  08_audispd_rules.sh  09_apparmor_config_hardening.sh  09_ipv6_only.sh  10_apparmor_config_hardening.sh  10_user_ssh_hardening.sh  12_banner_grabbing_hardening.sh  12_fluxbox_hardening.sh  13_banner_grabbing_hardening.sh  13_postgresql_hardening.sh  14_postgresql_hardening.sh  14_time_integrity_hardening.sh  15_dev_init.sh  15_time_integrity_hardening.sh  16_module_blacklist.sh  17_kernel_cmdline_lockdown.sh  17_module_blacklist.sh  18_kernel_cmdline_lockdown.sh  18_stack_canary_enforce.sh  19_pax_emulation_layer.sh  19_stack_canary_enforce.sh  (+19 more)
debian_skeleton/audit/: 00_whitevenom_bootstrap.conf  04_sysctl_venom_ipv6.conf  99-security-ipv6.conf  99-venom.conf  99_whitevenom_final.conf
debian_skeleton/firewall/: whitevenom_baseline.v6
debian_skeleton/include/: TimeCubeTypes.hpp
debian_skeleton/parking/: 00_install.sh  ConfigTemplates.cpp  auto_renumber.sh
debian_skeleton/plan/: EVOLUTION.md  IPv6_dual_stack_final.md  IPv6_implement.md  V6_worms_pentest_filter.md  White-Venom_Status_Report_2026-02-23.md  White-Venom_Status_Report_v2.5_Bio-Metric.md  White-Venom_Status_Report_v2.6_Neural_Ingress.md  global_dependency_map.md  📄
debian_skeleton/release/: .gitignore  manifest.json
debian_skeleton/src/: main.cpp  (+1 more)
docs/: 17_module_blacklist_README.md  23_90_README.md  ARCHITECT.md  CHANGELOG.md  LIFECYCLE.md  SECURITY_BOOTSTRAP_NOTES.md  audit_summary_251225.md  develop_summary_251225.md
docs1/: policy.md
plan/: skelleton.md
scripts/: apply-grub-hardening.sh  back_restore.md  backup_wsl2_env.sh  bootstrap_pure_debian_bookworm.sh  bootstrap_pure_debian_trixie.sh  chroot-init.sh  cpuvuln.sh  debootstrad.md  deploy-ipv6-harden.sh  grubtest  op6tables.sh  preinstall-check.md  preinstall-check.sh  restore_wsl2_env.sh  stress_test.sh  verify_apt_integrity.sh  verify_apt_integrity.sh_segédket.md  wg-router  wg-router-installer.sh  wg0.conf  wg_proton_v6.md
(+474 files in other folders)
